--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^8.1.3",
     "@types/uuid": "^10.0.0",
     "add": "^2.0.6",
+    "dotenv": "^17.2.0",
     "elysia": "^1.3.5",
     "lucide-react": "^0.525.0",
     "react": "^19",
