--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@mantine/core": "^8.1.3",
     "@mantine/hooks": "^8.1.3",
+    "@react-oauth/google": "^0.12.2",
     "@types/uuid": "^10.0.0",
     "add": "^2.0.6",
     "dotenv": "^17.2.0",
     "elysia": "^1.3.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "react": "^19",
     "react-dom": "^19",
